SERVER-40535 read signing keys with readConcern level majority

(cherry picked from commit 1d158cabb504fa9dba3ed0f0688cdf14cb7b0cba)